xdebug config + authentication
